@@ -20,16 +20,18 @@ my %WriteMakefileArgs = (
     "DateTime" => 0,
     "DateTime::Duration" => 0,
     "Time::Crontab" => 0,
-    "strict" => 0,
-    "warnings" => 0
+    "exact" => 0
   },
   "TEST_REQUIRES" => {
+    "Bot::IRC" => 0,
+    "Bot::IRC::Store" => 0,
     "File::Spec" => 0,
     "IO::Handle" => 0,
     "IPC::Open3" => 0,
+    "Test2::V0" => 0,
     "Test::More" => 0,
-    "Test::Most" => 0,
-    "constant" => 0
+    "strict" => 0,
+    "warnings" => 0
   },
   "VERSION" => "1.05",
   "test" => {
@@ -39,15 +41,17 @@ my %WriteMakefileArgs = (
 
 
 my %FallbackPrereqs = (
+  "Bot::IRC" => 0,
+  "Bot::IRC::Store" => 0,
   "DateTime" => 0,
   "DateTime::Duration" => 0,
   "File::Spec" => 0,
   "IO::Handle" => 0,
   "IPC::Open3" => 0,
+  "Test2::V0" => 0,
   "Test::More" => 0,
-  "Test::Most" => 0,
   "Time::Crontab" => 0,
-  "constant" => 0,
+  "exact" => 0,
   "strict" => 0,
   "warnings" => 0
 );
